--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <section id="about">
     <div class="container text-center">
       <!-- FOTO PROFIL -->
-      <img src="foto-alvina.jpg" 
+      <img src="foto-alvina.JPG" 
            class="rounded-circle img-fluid shadow mb-4" 
            alt="Foto Alvina" 
            style="width: 220px; height: 220px; object-fit: cover; border: 6px solid #1e90ff;">
