--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container">
+      <a class="navbar-brand" href="#">Alvina Portfolio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HEADER -->
   <header class="text-center">
     <div class="container">
       <h1>Alvina Gusti Pramita</h1>
@@ -15,6 +41,7 @@
     </div>
   </header>
 
+  <!-- ABOUT -->
   <section id="about">
     <div class="container text-center">
       <!-- FOTO PROFIL -->
@@ -32,6 +59,7 @@
     </div>
   </section>
 
+  <!-- PROJECTS -->
   <section id="projects">
     <div class="container">
       <h2>Projects</h2>
@@ -62,19 +90,35 @@
     </div>
   </section>
 
+  <!-- CONTACT -->
   <section id="contact">
-    <div class="container">
+    <div class="container text-center">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:pramitaalvina25@gmail.com">pramitaalvina25@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/alvina-pramita-907492240/" target="_blank">alvina-pramita-907492240</a></p>
-      <p>GitHub: <a href="https://github.com/Pramita03" target="_blank">Pramita03</a></p>
+      <div class="d-flex justify-content-center gap-4 flex-wrap mt-4">
+        <a href="mailto:pramitaalvina25@gmail.com" target="_blank" title="Email">
+          <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" width="40">
+        </a>
+        <a href="https://www.linkedin.com/in/alvina-pramita-907492240/" target="_blank" title="LinkedIn">
+          <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" width="40">
+        </a>
+        <a href="https://www.instagram.com/USERNAME_KAMU" target="_blank" title="Instagram">
+          <img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="Instagram" width="40">
+        </a>
+        <a href="https://wa.me/62xxxxxxxxxxx" target="_blank" title="WhatsApp">
+          <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="40">
+        </a>
+      </div>
     </div>
   </section>
 
+  <!-- FOOTER -->
   <footer>
     <div class="container text-center">
-      <p>© 2025 Alvina Gusti Pramita. All rights reserved.</p>
+      <p>© Alvina Gusti Pramita</p>
     </div>
   </footer>
+
+  <!-- BOOTSTRAP JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
