--- a/index.html
+++ b/index.html
@@ -150,8 +150,10 @@
   <!-- ABOUT -->
   <section id="about" class="text-center">
     <div class="container">
-      <img src="assets/foto-alvina.JPG" class="profile-img" alt="Foto Alvina"
-           onerror="this.src='https://via.placeholder.com/220x220.png?text=Foto+Alvina';">
+      <img src="assets/foto-alvina.JPG"
+           class="profile-img shadow"
+           alt="Foto Alvina"
+           style="max-width: 280px; height: auto; border-radius: 50%; border: 6px solid #5a67d8;">
       <h2>About Me</h2>
       <p>
         I’m a recent graduate in Information Systems from Universitas Muria Kudus with a strong interest in IT, 
@@ -206,7 +208,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-4 mb-4">
           <h4>SOSIAL MEDIA</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="mailto:pramitaalvina25@gmail.com" target="_blank">
+          <a class="btn btn-outline-light btn-social mx-1" href="pramitaalvina25@gmail.com" target="_blank">
             <i class="fas fa-envelope"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/alvina-pramita-907492240/" target="_blank">
@@ -221,7 +223,7 @@
         </div>
       </div>
       <div class="copyright mt-4">
-        <p>© 2025 Alvina Gusti Pramita. All rights reserved.</p>
+        <p>© Create by Alvina Gusti Pramita</p>
       </div>
     </div>
   </footer>
