--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-4 mb-4">
           <h4>SOSIAL MEDIA</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="pramitaalvina25@gmail.com" target="_blank">
+          <a class="btn btn-outline-light btn-social mx-1" href="mailto:pramitaalvina25@gmail.com" target="_blank">
             <i class="fas fa-envelope"></i>
           </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/alvina-pramita-907492240/" target="_blank">
