--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@
             <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -220,11 +223,15 @@
           </div>
   
           <div class="carousel-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968292.png" class="d-block mx-auto" style="width:100px;" alt="Excel">
-            <h5 class="mt-3">Microsoft Excel</h5>
-            <p>Familiar with formulas, pivot tables, and data visualization in Excel.</p>
-          </div>
-  
+          <img src="https://cdn-icons-png.flaticon.com/512/732/732235.png" class="d-block mx-auto" style="width:100px;" alt="Microsoft Excel">
+          <h5 class="mt-3">Microsoft Office Suite</h5>
+          <p>
+            Highly skilled in <strong>Microsoft Excel</strong> for data analysis, formulas, pivot tables, and dashboard creation.  
+            Also experienced with <strong>Word</strong>, <strong>PowerPoint</strong>, <strong>Visio</strong>, and <strong>PDF tools</strong>  
+            for documentation, presentation, diagramming, and digital document handling.
+          </p>
+        </div>
+
         </div>
   
         <!-- Controls -->
