--- a/index.html
+++ b/index.html
@@ -223,15 +223,15 @@
           </div>
   
           <div class="carousel-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/732/732235.png" class="d-block mx-auto" style="width:100px;" alt="Microsoft Excel">
+            <img src="https://cdn-icons-png.flaticon.com/512/732/732221.png" class="d-block mx-auto" style="width:100px;" alt="Microsoft Office">
             <h5 class="mt-3">Microsoft Office Suite</h5>
             <p>
-              Highly skilled in <strong>Microsoft Excel</strong> for data analysis, formulas, pivot tables, and dashboard creation.  
+              Proficient in <strong>Microsoft Excel</strong> for data analysis, formulas, pivot tables, and dashboard creation.  
               Also experienced with <strong>Word</strong>, <strong>PowerPoint</strong>, <strong>Visio</strong>, and <strong>PDF tools</strong>  
-              for documentation, presentation, diagramming, and digital document handling.
+              for documentation, presentations, diagramming, and file management.
             </p>
           </div>
-
+          
         </div>
   
         <!-- Controls -->
