--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
   </style>
 </head>
 <body>
-
+  <div class="text-end p-3">
+    <button class="btn btn-sm btn-outline-secondary" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+  </div>
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
@@ -130,6 +132,12 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#experience">Experience</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#education">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#skills">Skills</a>
@@ -196,6 +204,50 @@
       </div>
     </div>
   </section>
+  <!-- EXPERIENCE -->
+  <section id="experience">
+    <div class="container">
+      <h2 class="text-center">Experience</h2>
+  
+      <div class="project">
+        <h3>Tugas Akhir (Sentiment Analysis)</h3>
+        <p>Analisis sentimen penggunaan e-learning Sunan UMK menggunakan Python, scikit-learn, dan XAMPP.</p>
+      </div>
+  
+      <div class="project">
+        <h3>Mobile App: Sistem Penjualan Kopi</h3>
+        <p>Proyek akhir kuliah menggunakan Visual Studio Code, terhubung ke database MySQL.</p>
+      </div>
+  
+      <div class="project">
+        <h3>MSIB – AI for Jobs, PT. Orbit Ventura</h3>
+        <p>Implementasi machine learning untuk aplikasi sederhana. Bertugas sebagai team leader.</p>
+      </div>
+  
+      <div class="project">
+        <h3>UKM Jurnalistik – Universitas Muria Kudus</h3>
+        <p>Kepala Divisi Pusat Data & Divisi Kaderisasi. Bertugas mengelola dokumentasi dan pelatihan fotografi.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- EDUCATION -->
+  <section id="education">
+    <div class="container">
+      <h2 class="text-center">Education</h2>
+      <div class="project">
+        <h3>Universitas Muria Kudus</h3>
+        <p><strong>S1 Sistem Informasi</strong> (2021 – 2025) | IPK 3.9 / 4.0</p>
+        <p>Mata kuliah relevan:
+          <ul>
+            <li>Mobile App Development & Web Programming</li>
+            <li>Data Mining & Business Intelligence</li>
+            <li>Database Systems & Project Management</li>
+          </ul>
+        </p>
+      </div>
+    </div>
+  </section>
 
   <!-- SKILLS -->
   <section id="skills">
@@ -250,7 +302,8 @@
   <section id="contact">
     <div class="container text-center">
       <h2>Contact</h2>
-      <p>You can reach me through the following platforms:</p>
+      <p>You can reach me at:</p>
+      <p><a href="mailto:pramitaalvina25@gmail.com">pramitaalvina25@gmail.com</a></p>
     </div>
   </section>
 
@@ -260,9 +313,6 @@
       <div class="row justify-content-center">
         <div class="col-lg-4 mb-4">
           <h4>SOSIAL MEDIA</h4>
-          <a class="btn btn-outline-light btn-social mx-1" href="mailto:pramitaalvina25@gmail.com" target="_blank">
-            <i class="fas fa-envelope"></i>
-          </a>
           <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/alvina-pramita-907492240/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
@@ -282,5 +332,10 @@
 
   <!-- BOOTSTRAP JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function toggleDarkMode() {
+      document.body.classList.toggle("dark-mode");
+    }
+  </script>
 </body>
 </html>
